--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,11 @@
     <string name="bing">bing</string>
     <string name="wiki">wiki</string>
     <string name="duckduckgo">duckduckgo</string>
+    <string name="twitter">Twitter</string>
+    <string name="youtube">Youtube</string>
+    <string name="facebook">Facebook</string>
+    <string name="instagram">Instagram</string>
+
+    <string name="satyam">By SATYAM SRIVASTAVA</string>
+    <string name="my_browser">My Browser</string>
 </resources>
